<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onClick"
            type="com.infotech4it.flare.views.activities.RegistrationActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.RegistrationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="Registration"
                android:textColor="@color/white"
                android:textSize="@dimen/textnormallarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="5dp"
                android:onClick="@{(view)->onClick.onClick(view)}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/name_hint"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textPersonName"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_email"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textEmailAddress"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_num"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="number"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_pasword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password_hint"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textPassword"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_confirm_pasword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password_again_hint"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_pasword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="textPassword"
                        android:maxLength="9"
                        android:maxLines="1"
                        android:paddingStart="30dp"
                        android:paddingLeft="30dp"
                        android:paddingEnd="40dp"
                        android:paddingRight="40dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textnormallarge"
                    android:onClick="@{(view)->onClick.onClick(view)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/text_confirm_pasword"
                    app:layout_constraintStart_toStartOf="@+id/text_confirm_pasword"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirm_pasword" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/textnormal"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/poppins_semibold"
                    android:lineHeight="30dp"
                    android:text="Get Yourself Register and Enjoy Sharing moments with your Friends and Family"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>