<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onClickLogin"
            type="com.infotech4it.flare.views.activities.LoginActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.activities.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="@dimen/textnormallarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="5dp"
                android:onClick="@{(view)->onClickLogin.onClickLogin(view)}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobilePasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:paddingLeft="30dp"
                android:paddingRight="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_pasword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password_hint"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/textnormal"
            android:onClick="@{(view)->onClickLogin.onClickLogin(view)}"
            app:layout_constraintEnd_toEndOf="@+id/text_pasword"
            app:layout_constraintStart_toStartOf="@+id/text_pasword"
            app:layout_constraintTop_toBottomOf="@+id/text_pasword" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textnormallarge"
            android:onClick="@{(view)->onClickLogin.onClickLogin(view)}"
            app:layout_constraintEnd_toEndOf="@+id/txtForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/txtForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="Welcome to Flare"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Flare is a fast and fun way to share the moment with friends and family"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textnormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Don't have an account! Get Yourselft Register Now"
            android:textColor="@color/black"
            android:textSize="@dimen/textfort"
            android:textAlignment="center"
            android:gravity="center"
            android:onClick="@{(view)->onClickLogin.onClickLogin(view)}"
            android:fontFamily="@font/poppins_semibold"
            android:padding="@dimen/padd_10"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>